Changes for 1.5.4

 - [DEV-144] added massupdate for triggers (Artem)
 - [DEV-188] implemented sound on/off button in status of triggers screens (Artem) 
 - [DEV-184] added trigger dependencies in export/import (Artem)
 - [DEV-150] added error reporting for zabbix_get (Sasha)
 - [DEV-177] added checkbox range selection (Artem)
 - [DEV-183] added support of applications in action conditions (Sasha)
 - [DEV-174] added ability to edit user medias (Artem)
 - [DEV-185] added support of zabbix[uptime] and zabbix[boottime] (Alexei)
 - [DEV-176] implemented "color only non-zero values" in "Status of triggers" (Artem)
 - [DEV-175] added last login time to users tab (Artem)
 - [DEV-178] improved the permissions scheme in frontend (Artem)

Changes for 1.5.3

 - [ZBX-380] added support of directories for Include in configuration file (Sasha)
 - [DEV-171] added support of notification escalations on frontend side (Artem)
 - [DEV-173] added support of macros {EVENT.DATE},{EVENT.TIME},{EVENT.AGE} and {ESC.HISTORY} (Sasha)
 - [DEV-173] added support of notification escalations on server side (Sasha)
 - [DEV-172] added support of Apache authentication (Artem)
 - [DEV-170] improved charts period & start time selection (Artem)
 - [DEV-163] added support of perf_counter[path<,period>] (Sasha)
 - [DEV-169] improved msg functionality in GUI (Artem)
 - [DEV-149] added hosts masss update functionality (Artem)
 - [DEV-167] added support of Host Template=<template> in actions (Sasha)
 - [DEV-168] added more supported items in FreeBSD, NetBSD and OpenBSD (Sasha)
 - [DEV-161] changed greeting message (Artem)
 - [DEV-157] added fullscreen icon to monitoring screens (Artem)

Changes for 1.5.2:

 - [DEV-153] added protection against brute force attack (Artem)
 - [DEV-158] added standart sorting to screens (Artem)
 - [DEV-154] added more flexibility to scripts (Artem)
 - [DEV-166] fixed problem with node syncing (Sasha)
 - [DEV-145] added Ldap authentication (Artem)