@@ -1272,7 +1272,8 @@
 	'S_TRIGGER'=>				'Trigger',
 	'S_SERVER'=>				'Server',
 	'S_DELETE'=>				'Delete',
-	'S_CLONE'=>				'Clone',
+	'S_CLONE'=>					'Clone',
+	'S_FULL_CLONE'=>			'Full clone',
 	'S_DELETE_SELECTED'=>			'Delete selected',
 	'S_DELETE_SELECTED_SERVICES'=>		'Delete selected services?',
 	'S_DELETE_SELECTED_LINKS'=>		'Delete selected links?',
