@@ -1,6 +1,7 @@
 Changes for 1.5.4
 
- - [DEV-144] added massupdate for triggers (Artem)
+ - [DEV-189] added full clone to hosts (Artem)
+ - [DEV-182] added massupdate for triggers (Artem)
  - [DEV-188] implemented sound on/off button in status of triggers screens (Artem) 
  - [DEV-184] added trigger dependencies in export/import (Artem)
  - [DEV-150] added error reporting for zabbix_get (Sasha)
